app-yamls/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/yoram-carmel-status-page/nginx:http
          ports:
            - containerPort: 80
