app-yamls/wsgi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wsgi-service
  labels:
    app: wsgi
spec:
  type: NodePort
  selector:
    app: wsgi
  ports:
    - port: 8001       
      targetPort: 8001
